# hagrid-ai

./: .gitignore  ARCHITECTURE.md  FINAL_SUMMARY.md  INFORMATION_FLOW.md  PLAN.md  README.md  main.py  pyproject.toml  verify_connections.py
agents/managers/: __init__.py  cio.py  derivatives_manager.py  fundamentals_manager.py  market_intel_manager.py  technical_manager.py
agents/monitoring/: __init__.py  agent.py  instructions.py
agents/news_summarizer/: __init__.py  agent.py  instructions.py
agents/post_trade/: __init__.py  agent.py  instructions.py
api/: main.py
api/routes/: __init__.py  trades.py  workflows.py
broker/: fyers_broker.py  interface.py  mock_broker.py
broker/fyers/: API_DOCS.md  FINAL_VERIFICATION.md  IMPROVEMENTS.md  README.md  SYMBOLOGY.md  VERIFICATION.md  __init__.py  client.py  toolkit.py
core/: analysis_toolkit.py  broker_toolkit.py  config.py  fyers_client.py  indicators.py  logging_setup.py  logic.py  market_data_sources.py  models.py  types.py
notebooks/: fundamentals.ipynb
notebooks/.ipynb_checkpoints/: play_fyers-checkpoint.ipynb  symbol_master-checkpoint.ipynb
plans/: trading-workflow-system.md
scheduler/: __init__.py  __main__.py  jobs.py  scheduler.py
scripts/: __init__.py  __main__.py  fyers.py
tools/analysis/: __init__.py  toolkit.py
tools/cogencis/: README.md  __init__.py  client.py
tools/correlation/: __init__.py  toolkit.py
ui/: package.json  pnpm-lock.yaml
workflows/: __init__.py  executor.py  intraday_cycle.py  intraday_cycle_multi_sectors.py  monitoring.py  news_workflow.py  post_trade.py
(+231 files in other folders)
